# hdf5storage

./: .readthedocs.yaml  THANKS.rst  pyproject.toml
.github/workflows/: build_wheel.yaml  unit_tests.yml
doc/: requirements.txt
doc/source/: api_for_plugins_developers.rst  conf.py  hdf5storage.marshallers.rst
examples/example_hdf5storage_marshaller_plugin/src/example_hdf5storage_marshaller_plugin/: __init__.py
hdf5storage/: Marshallers.py  __init__.py  marshallers.py  plugins.py  py.typed  typing.py  utilities.py
tests/: asserts.py  make_randoms.py  test_basic_read_write.py  test_dict_like_storage_methods.py  test_empty_matrix_matlab_metadata.py  test_hdf5_filters.py  test_julia_mat_compatibility.py  test_marshaller_collection_priority.py  test_marshaller_plugins.py  test_marshallers_requiring_modules.py  test_matlab_compatibility.py  test_multi_io.py  test_ndarray_O_field.py  test_path_escaping.py  test_string_utf16_conversion.py  test_write_readback.py
